--- a/yaml/nginx-deploy.yaml
+++ b/yaml/nginx-deploy.yaml
@@ -1,12 +1,19 @@
-apiVersion: v1
-kind: Pod
+apiVersion: apps/v1
+kind: Deployment
 metadata:
-  name: nginx
-  labels:
-    app: nginx # 이 라벨은 Selector와 연결됩니다.
+  name: nginx-deployment
 spec:
-  containers:
-    - name: nginx-container
-      image: kkmee0209/nginxtest:v1 # 빌드한 Nginx 이미지의 이름
-      ports:
-        - containerPort: 80
+  replicas: 3
+  selector:
+    matchLabels:
+      app: nginx
+  template:
+    metadata:
+      labels:
+        app: nginx
+    spec:
+      containers:
+        - name: nginx
+          image: kkmee0209/nginxtest:latest # 사용할 커스텀 Nginx 이미지
+          ports:
+            - containerPort: 80
