--- a/yaml/nginx-deploy.yaml
+++ b/yaml/nginx-deploy.yaml
@@ -15,5 +15,6 @@ spec:
       containers:
         - name: nginx
           image: kkmee0209/nginxtest:latest # 사용할 커스텀 Nginx 이미지
+          imagePullPolicy: Always
           ports:
             - containerPort: 80
